- Move to Quarkus and add a web endpoint